# discobase

./: .gitignore  .pre-commit-config.yaml  README.md  hatch.toml  mkdocs.yml  pyproject.toml  requirements.txt  test.py
.github/workflows/: build.yml  lint.yaml  pr_tests.yml  tests.yml
docs/: demonstration.md  discord_interface.md  index.md  introduction.md  library.md  reference.md
src/: config.py  discobase_client.py  main.py  rundemo.py
src/demo/: __about__.py  bookmark.py  bookmark_embed.py  bookmark_ui.py  commands.py  db_interactions.py  demobot_commands.py  demobot_config.py  main.py  models.py
src/discobase/: __about__.py  __init__.py  _cursor.py  _metadata.py  _util.py  database.py  discobase.py  exceptions.py  schema.py  table.py
src/discobase/cogs/: utility.py  visualization.py
src/discobase/commands/: queries.py  visualizer.py
src/discobase/ui/: embed.py
tests/: test_database.py  test_foo.py
