[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "discobase"
readme = "README.md"
license = "MIT"
dependencies = ["discord.py", "pydantic", "typing_extensions"]
dynamic = ["version"]

[tool.ruff]
line-length = 79 # PEP 8

[tool.ruff.lint]
ignore = ["F403"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.coverage.run]
source = ["livecov"]

[tool.pytest.ini_options]
addopts = "--cov --cov-report=lcov:lcov.info --cov-report=term"
