[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "discobase"
readme = "README.md"
license = "MIT"
dependencies = ["discord.py", "pydantic", "typing_extensions", "loguru"]
dynamic = ["version"]

[tool.ruff]
line-length = 79 # PEP 8

[tool.ruff.lint]
ignore = ["F403"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
